<resources>
    <string name="app_name">Event Journal App</string>
    <string name="eventTitle">Welcome!</string>
    <string name="eventSubtitle">Add Your Event Details</string>
    <string name="event_name">Event Name</string>
    <string name="event_type">Event Type</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="budget">Budget</string>
    <string name="amount">Amount</string>
    <string name="total">Total spent on events so far</string>
    <string name="eventButton">Add Event</string>
    <string name="totalSoFar">$ %1$d</string>
    <string name="reportTitle">Event List</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_event">Add Event</string>
    <string name="action_report">Events</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Event Journal App</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_message_first">Welcome to the Memory Lane Event Journal App!</string>
    <string name="aboutus_message_second">We are here to provide you with the ultimate event journal experience.</string>
    <string name="aboutus_message_third">Thank you for choosing us!</string>

    <string name="eventsNotFound">No Events Yet…</string>
    <string name="eventError">Error : Couldn\'t Add an Event…</string>
    <string name="eventDetails">Event Details</string>

    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>


    <string name="messageLoading">Please Wait while the Events are Loading…</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="client_id">469289401091-fk7hd1f68ec7uvp9o7fksv7cg0leeqao.apps.googleusercontent.com</string>
    <string name="select_profile_image">Select Profile Picture</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_location">Add Location</string>
    <string name="change_event_image">Change Image\n</string>
    <string name="action_location">Event Locations</string>
    <string name="search">Search\n</string>
    <string name="delete_all_events">Delete All Events</string>
    <string name="edit_image">Edit Image</string>
    <string name="update_event">Update</string>
    <string name="delete_event">Delete</string>
    <string name="amount_spent">Total Spent on this Event</string>

    <string-array name="eventTypesArray">
        <item>Wedding</item>
        <item>Holiday</item>
        <item>Birthday Party</item>
        <item>Conference</item>
        <item>Sport</item>
        <item>Concert</item>
        <item>Graduation</item>
        <item>Corporate Event</item>
        <item>Anniversary</item>
        <item>Festival</item>
        <item>Exhibition</item>
        <item>Workshops</item>
        <item>Other</item>
    </string-array>
</resources>